--- a/react-app/src/components/UserPages/User.css
+++ b/react-app/src/components/UserPages/User.css
@@ -1,22 +1,23 @@
 div.user-scores-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin: 30px 0px;
 }
 
 div.user-scores__game {
-    display: flex;
-    flex-direction: row;
-    margin-top: 30px;
-    justify-content: space-between;
-    align-items: center;
+	display: flex;
+	flex-direction: row;
+	margin-top: 30px;
+	justify-content: space-between;
+	align-items: center;
 }
 
 div.user-scores__game > * {
-    padding-right: 20px;
+	padding-right: 20px;
 }
 
 p.game-name {
-    font-size: 16px;
-    font-weight: bold;
+	font-size: 16px;
+	font-weight: bold;
 }
